--- a/azure-pipelines/docker/continuous-build-docker.yml
+++ b/azure-pipelines/docker/continuous-build-docker.yml
@@ -22,9 +22,10 @@ steps:
     set -e
     
     export DISPLAY=:99.0
+    echo "Starting Build"
 
     REGISTRY=upskillBedrockRegistry
-    VERSION=$(npm version patch)
+    VERSION=latest # $(npm version patch)
     CONTAINER_NAME=vott-container
     AZURE_SUB_NAME="PELITTLE TEAM - CSE DWR"
     AZURE_SUB_ID=d36d0808-a967-4f73-9fdc-32ea232fc81d
