--- a/azure-pipelines/docker/continuous-build-docker.yml
+++ b/azure-pipelines/docker/continuous-build-docker.yml
@@ -18,6 +18,17 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
+  
+- task: DockerInstaller@0
+  inputs:
+    dockerVersion: '17.09.0-ce'
+
+- task: AzureCLI@1
+  inputs:
+    connectedServiceNameARM: 'PELITTLE TEAM - CSE DWR (d36d0808-a967-4f73-9fdc-32ea232fc81d)'
+    scriptLocation: 'inlineScript'
+    inlineScript: './scripts/connect-acr.sh'
+
 - bash: | 
     set -e
     
@@ -31,16 +42,16 @@ steps:
     AZURE_SUB_ID=d36d0808-a967-4f73-9fdc-32ea232fc81d
 
     npm ci  # do a clean install
-    npm run compile
+    # npm run compile
 
-    npm run test:ci # don't watch and just run all the tests
+    # npm run test:ci # don't watch and just run all the tests
     npm run build
 
-    echo "Setting Azure subscription to: ${AZURE_SUB_NAME}"
-    az account set --subscription ${AZURE_SUB_ID}
+    # echo "Setting Azure subscription to: ${AZURE_SUB_NAME}"
+    # az account set --subscription ${AZURE_SUB_ID}
 
-    echo "Logging into ACR ${REGISTRY}"
-    az acr login --name ${REGISTRY}
+    # echo "Logging into ACR ${REGISTRY}"
+    # az acr login --name ${REGISTRY}
 
     # docekr build --rm -f Dockerfile -t vott-container:latest .
 
