--- a/azure-pipelines/docker/continuous-build-docker.yml
+++ b/azure-pipelines/docker/continuous-build-docker.yml
@@ -23,11 +23,16 @@ steps:
   inputs:
     dockerVersion: '17.09.0-ce'
 
+# - task: AzureCLI@1
+#   inputs:
+#     connectedServiceNameARM: 'PELITTLE TEAM - CSE DWR (d36d0808-a967-4f73-9fdc-32ea232fc81d)'
+#     scriptLocation: 'inlineScript'
+#     inlineScript: './scripts/connect-acr.sh'
+
 - task: AzureCLI@1
   inputs:
     connectedServiceNameARM: 'PELITTLE TEAM - CSE DWR (d36d0808-a967-4f73-9fdc-32ea232fc81d)'
-    scriptLocation: 'inlineScript'
-    inlineScript: './scripts/connect-acr.sh'
+    scriptPath: './scripts/connect-acr.sh'
 
 - bash: | 
     set -e
