--- a/azure-pipelines/docker/continuous-build-docker.yml
+++ b/azure-pipelines/docker/continuous-build-docker.yml
@@ -55,8 +55,8 @@ steps:
     # echo "Setting Azure subscription to: ${AZURE_SUB_NAME}"
     # az account set --subscription ${AZURE_SUB_ID}
 
-    # echo "Logging into ACR ${REGISTRY}"
-    # az acr login --name ${REGISTRY}
+    echo "Logging into ACR ${REGISTRY}"
+    docker login upskillbedrockregistry.azurecr.io
 
     # docekr build --rm -f Dockerfile -t vott-container:latest .
 
