--- a/azure-pipelines/docker/continuous-build-docker.yml
+++ b/azure-pipelines/docker/continuous-build-docker.yml
@@ -34,6 +34,11 @@ steps:
     connectedServiceNameARM: 'PELITTLE TEAM - CSE DWR (d36d0808-a967-4f73-9fdc-32ea232fc81d)'
     scriptPath: './scripts/connect-acr.sh'
 
+- task: Docker@2
+  inputs:
+    containerRegistry: 'fb116db9-622e-4b02-b5ba-65cc76f2cb4f'
+    command: 'login'
+
 - bash: | 
     set -e
     
@@ -55,20 +60,29 @@ steps:
     # echo "Setting Azure subscription to: ${AZURE_SUB_NAME}"
     # az account set --subscription ${AZURE_SUB_ID}
 
-    echo "Logging into ACR ${REGISTRY}"
-    docker login upskillbedrockregistry.azurecr.io
+    # echo "Logging into ACR ${REGISTRY}"
+    # az acr login --name ${REGISTRY}
 
     # docekr build --rm -f Dockerfile -t vott-container:latest .
 
-    echo "Building image ${CONTAINER_NAME}:${VERSION}..."
-    docker build --no-cache -t ${CONTAINER_NAME}:${VERSION} -t ${CONTAINER_NAME}:latest .
+    # echo "Building image ${CONTAINER_NAME}:${VERSION}..."
+    # docker build --no-cache -t ${CONTAINER_NAME}:${VERSION} -t ${CONTAINER_NAME}:latest .
 
-    echo "Tagging image ${CONTAINER_NAME} ${REGISTRY}.azurecr.io/${CONTAINER_NAME}:${VERSION} and latest"
-    docker tag ${CONTAINER_NAME} ${REGISTRY}.azurecr.io/${CONTAINER_NAME}:${VERSION}
-    docker tag ${CONTAINER_NAME} ${REGISTRY}.azurecr.io/${CONTAINER_NAME}:latest
+    # echo "Tagging image ${CONTAINER_NAME} ${REGISTRY}.azurecr.io/${CONTAINER_NAME}:${VERSION} and latest"
+    # docker tag ${CONTAINER_NAME} ${REGISTRY}.azurecr.io/${CONTAINER_NAME}:${VERSION}
+    # docker tag ${CONTAINER_NAME} ${REGISTRY}.azurecr.io/${CONTAINER_NAME}:latest
 
-    echo "Pushing image to: ${REGISTRY}.azurecr.io/${CONTAINER_NAME} and ${CONTAINER_NAME}:latest"
-    docker push ${REGISTRY}.azurecr.io/${CONTAINER_NAME}:${VERSION}
-    docker push ${REGISTRY}.azurecr.io/${CONTAINER_NAME}:latest
+    # echo "Pushing image to: ${REGISTRY}.azurecr.io/${CONTAINER_NAME} and ${CONTAINER_NAME}:latest"
+    # docker push ${REGISTRY}.azurecr.io/${CONTAINER_NAME}:${VERSION}
+    # docker push ${REGISTRY}.azurecr.io/${CONTAINER_NAME}:latest
 
-  displayName: 'Run docker build'
+  displayName: 'Run npm build'
+
+  
+- task: Docker@2
+  inputs:
+    containerRegistry: 'fb116db9-622e-4b02-b5ba-65cc76f2cb4f'
+    command: 'buildAndPush'
+    buildContext: 'https://github.com/Microsoft/VoTT.git#PIC123/feat-docker'
+    tags: '${REGISTRY}.azurecr.io/${CONTAINER_NAME}:${VERSION}
+${REGISTRY}.azurecr.io/${CONTAINER_NAME}:latest'
