--- a/azure-pipelines/docker/continuous-build-docker.yml
+++ b/azure-pipelines/docker/continuous-build-docker.yml
@@ -82,6 +82,13 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'fb116db9-622e-4b02-b5ba-65cc76f2cb4f'
-    command: 'buildAndPush'
+    command: 'build'
+    tags: '${REGISTRY}.azurecr.io/${CONTAINER_NAME}:${VERSION}
+${REGISTRY}.azurecr.io/${CONTAINER_NAME}:latest'
+
+- task: Docker@2
+  inputs:
+    containerRegistry: 'fb116db9-622e-4b02-b5ba-65cc76f2cb4f'
+    command: 'push'
     tags: '${REGISTRY}.azurecr.io/${CONTAINER_NAME}:${VERSION}
 ${REGISTRY}.azurecr.io/${CONTAINER_NAME}:latest'
